# shortcode

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build.ps1  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
codebrief/: __init__.py  __main__.py  formatter.py  languages.py  models.py  parser.py
codebrief/agents/: __init__.py  _base.py  mcp.py
sample/: example.h  example.py
shortcode/: __init__.py  __main__.py
shortcode/agents/: _base.py  mcp.py
tests/: test_parser.py
tests/fixtures/: sample.cpp  sample.go  sample.java  sample.js  sample.py
