[project]
name = "codebrief"
version = "0.1.0"
description = "Extract compact structural maps from source code to save LLM tokens"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ahmet Bekcan", email = "ahmetbekcan26@gmail.com" }]
keywords = ["llm", "code-analysis", "tree-sitter", "context", "tokens"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
    "tree-sitter>=0.25.2",
    "tree-sitter-c-sharp>=0.23.5",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-php>=0.24.1",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-ruby>=0.23.1",
    "tree-sitter-rust>=0.24.2",
    "tree-sitter-typescript>=0.23.2",
]

[project.urls]
Homepage = "https://github.com/ahmetbekcan/codebrief"
Repository = "https://github.com/ahmetbekcan/codebrief"
Issues = "https://github.com/ahmetbekcan/codebrief/issues"

[project.scripts]
codebrief = "codebrief.__main__:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/fixtures/*" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
